style.css
@import url("https://fonts.googleapis.com/css2?family=Tangerine:wght@400;700&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
@font-face {
  font-family: RM;
  src: url(./Media/Fonts/RamadhanMubarak.ttf);
}
* ::-moz-selection {
  background: var(--selection);
}
* ::selection {
  background: var(--selection);
}
* ::-webkit-scrollbar {
  background: #101010;
  width: 0.5rem;
}
* ::-webkit-scrollbar-thumb {
  background: #202020;
}
img{
  user-select: none;
}
body {
  background: var(--bg);
  margin: 0%;
}

:root {
  --selection:rgba(175, 250, 37, 0.765);
  --accent:rgb(255, 94, 0);
  --bg:rgb(0, 0, 0);
  --text:rgb(255, 252, 252);
}

#bg {
  pointer-events: none;
  position: fixed;
  width: 100vw;
  top: 0;
  height: 100vh;
  background: var(--bg);
  transition: opacity 1s;
}
#bg h1 {
  font-weight: 100;
  font-family: "RM";
  color: antiquewhite;
  position: absolute;
  left: 1rem;
  font-size: 25vw;
}
#bg img {
  position: absolute;
  bottom: -2vh;
  width: 100vw;
}

#pushover {
  display: none;
  position: fixed;
  bottom: -200%;
  width: 100vw;
  height: 200%;
}

nav {
  color: var(--text);
  max-height: inherit;
  background: rgba(0, 0, 0, 0.39);
  gap: 2rem;
  z-index: 999;
  position: fixed;
  width: 100%;
  -webkit-backdrop-filter: blur(5px);
          backdrop-filter: blur(5px);
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding-left: 10px;
  padding-right: 10px;
  margin-top: -20px;
}



nav img{
  width: 300px;
  height: 100px;
  object-fit: cover;
  margin-left: -60px;
}

nav ul {
  padding: 1rem;
  display: flex;
  gap: 1.5rem;
  list-style: none;
  padding-right: 20px;
  align-items: center;
  font-family: "Poppins", sans-serif;
  font-weight: 500;
  font-size: 1.3rem;
}
nav ul a {
  text-decoration: none;
  color: var(--text);
}

nav ul a:hover{
  color: rgb(192, 56, 255);
  font-weight: 500;
  font-size: 1.3rem;
}

nav ul a.hover-underline-animation {
  display: inline-block;
  position: relative;
}

nav ul a.hover-underline-animation:after {
  content: '';
  position: absolute;
  width: 100%;
  transform: scaleX(0);
  height: 2px;
  bottom: 0;
  left: 0;
  background-color: #0087ca;
  transform-origin: bottom right;
  transition: transform 0.25s ease-out;
}

nav ul a.hover-underline-animation:hover:after {
  transform: scaleX(1);
  transform-origin: bottom left;
}

#main {
  position: relative;
   margin-top: 3em; 
  margin-bottom: 2em;
  z-index: 0;
  display: flex;
  align-items: center;
  flex-direction: column;
  gap: 3rem;
  overflow: hidden;
}

.header{
  width: 100%;
  height: 100vh;
  display: flex;
}

.header .headright{
  color: #ffffff;
  width: 100%;
  text-align: justify;
  align-items: center;
  justify-content: center;
  display: flex;
  padding: 30px;
  font-size: 30px;
}

.header .headright span{
  font-family: algerian;
  font-size: 100px;
}

.header .headleft{
  width: 100%;
}

.logo-slider{
  width: 100%;
}

.slider-area h2 {
	text-align: center;
  font-family: "Poppins", sans-serif;

	font-size: 60px;
	font-weight: 500;
	text-transform: capitalize;
	letter-spacing: 2px;
	margin: 100px 0 30px 0;
	color: #fff;
}

.slider-area hr{
  width: 50%;
}

.wrapper {
	display: flex;
  gap: 1rem;
	width: 100%;
	margin: 0 auto;
	overflow: hidden;
	border-radius: .5rem;
	padding: .5rem;
	background: rgba(221, 221, 221, 0);
	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
}
.item {
border-radius: inherit;
	animation: animate 25s alternate linear infinite;
}
.item img{
  width: 400px;
  height: 200px;
  object-fit: cover;
	border-radius:inherit;

}
.container:hover .item {
	animation-play-state: paused;
}
@keyframes animate {
	0% {
		transform: translateX(550px);
	}
	100% {
		transform: translateX(-550px);
	}
}

.cardh2 {
	text-align: center;
  font-family: "Poppins", sans-serif;
  display: flex;
	font-size: 60px;
	font-weight: 500;
	text-transform: capitalize;
	letter-spacing: 2px;
	color: #fff;
  margin-bottom: -30px;
}

.cardhr{
  width: 100%;
  color: #fff;
  margin-bottom: -25px;
  width: 50%;
}

.card {
  -webkit-backdrop-filter: blur(1px);
          backdrop-filter: blur(1px);
  background: rgba(0, 0, 0, 0.2);
  padding: 1rem;
  border: 1px solid var(--text);
  border-radius: 1rem;
  font-family: "Poppins", sans-serif;
  text-align: justify;
  width: 55rem;
  height: 30rem;
  color: var(--text);
  display: flex;
  gap: 1rem;
  position: relative;
}
.card .EventName {
  font-weight: 900;
  font-size: 3rem;
}
.card .rside {
  height: inherit;
  display: flex;
  flex-direction: column;
}
.more{
  z-index: 3;
  color: white;
  width: 90%;
  font-family: "Poppins", sans-serif;
  backdrop-filter: blur(30PX);
  background: rgb(30, 30, 30);
  display: none;
  position: fixed;
  top: 2%;
  height: 80vh;
  padding: 1rem;
  padding-top: 5rem;
  border-radius: 1rem;
  left: 50%;
  transform: translateX(-50%);
  overflow: auto;
  filter:drop-shadow(16px 16px 10px black);
}

/* Hide scrollbar for Chrome, Safari and Opera */
.more::-webkit-scrollbar {
  display: none;
}

/* Hide scrollbar for IE, Edge and Firefox */
.more {
  -ms-overflow-style: none;  /* IE and Edge */
  scrollbar-width: none;  /* Firefox */
}
.card .buttons, .more .buttons {
  width: 100%;
  display: flex;
  justify-content: center;
  gap: 2rem;
}

.more .buttons.space{
  padding-bottom: 30px;
}
.card .buttons a,button,.more .buttons a {
  width: 50%;
  background: #ffffff;
  padding: 1rem;
  text-align: center;
  border-radius: 1rem;
  text-decoration: none;
  color: #000;
  transition: 0.2s;
  border: none;
}
.card .buttons a:hover ,button:hover,.more .buttons a:hover{
  background: #000000;
  color: #ffffff;
  cursor: pointer;
}
.card p {
  text-transform: capitalize;
  height: inherit;
}
/* ... */

